refactor: moved pretrained loading to auxiliary modules

--- a/main.ipynb
+++ b/main.ipynb
@@ -79,7 +79,7 @@
     "    'optimizer': {\n",
     "        'lr': config.lr,\n",
     "    },\n",
-    "    'device': 'cuda',\n",
+    "    'device': config.device,\n",
     "}"
    ]
   },
@@ -91,12 +91,12 @@
    "source": [
     "for i, (train_index, test_index) in enumerate(folds_annotated):\n",
     "    model = RANZCRStageZero(params)\n",
-    "    model.set_device((0, 1, 2, 3))\n",
+    "    model.set_device(config.devices)\n",
     "\n",
     "    train_dataset, val_dataset = Subset(dataset, train_index), Subset(dataset, test_index)\n",
     "\n",
-    "    train_loader = DataLoader(train_dataset, batch_size=config.train_batch_size, num_workers=config.n_workers, pin_memory=True, shuffle=True, drop_last=True)\n",
-    "    val_loader = DataLoader(val_dataset, batch_size=config.valid_batch_size, num_workers=config.n_workers, pin_memory=True)\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=config.train_batch_size, num_workers=config.n_workers, drop_last=True)\n",
+    "    val_loader = DataLoader(val_dataset, batch_size=config.valid_batch_size, num_workers=config.n_workers)\n",
     "\n",
     "    callbacks = [\n",
     "        MonitorCheckpoint(dir_path=f'{config.experiment_name}_stage0_fold_{i}', monitor='val_multi_auc', max_saves=3),\n",
@@ -163,7 +163,7 @@
     "    'optimizer': {\n",
     "        'lr': config.lr,\n",
     "    },\n",
-    "    'device': 'cuda',\n",
+    "    'device': config.device,\n",
     "}"
    ]
   },
@@ -174,22 +174,14 @@
    "outputs": [],
    "source": [
     "for i, (train_index, test_index) in enumerate(folds_annotated):\n",
-    "    teacher_model = argus.load_model(get_best_model_path(f'{config.experiment_name}_stage0_fold_{i}/'), device='cpu')\n",
-    "    teacher_model.eval()\n",
-    "\n",
-    "    teacher_model = teacher_model.get_nn_module()\n",
-    "\n",
-    "    for param in teacher_model.parameters():\n",
-    "        param.requires_grad = False\n",
-    "\n",
-    "    params['nn_module']['teacher_model'] = teacher_model\n",
+    "    params['nn_module']['teacher_model_path'] = get_best_model_path(f'{config.experiment_name}_stage0_fold_{i}/')\n",
     "    model = RANZCRStageOne(params)\n",
-    "    model.set_device((0, 1, 2, 3))\n",
+    "    model.set_device(config.devices)\n",
     "\n",
     "    train_dataset, val_dataset = Subset(dataset, train_index), Subset(dataset, test_index)\n",
     "\n",
-    "    train_loader = DataLoader(train_dataset, batch_size=config.train_batch_size, num_workers=config.n_workers, pin_memory=True, shuffle=True, drop_last=True)\n",
-    "    val_loader = DataLoader(val_dataset, batch_size=config.valid_batch_size, num_workers=config.n_workers, pin_memory=True)\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=config.train_batch_size, num_workers=config.n_workers, shuffle=True, drop_last=True)\n",
+    "    val_loader = DataLoader(val_dataset, batch_size=config.valid_batch_size, num_workers=config.n_workers)\n",
     "\n",
     "    callbacks = [\n",
     "        MonitorCheckpoint(dir_path=f'{config.experiment_name}_stage1_fold_{i}', monitor='val_multi_auc', max_saves=3),\n",
@@ -248,7 +240,7 @@
     "    'optimizer': {\n",
     "        'lr': config.lr / 2,\n",
     "    },\n",
-    "    'device': 'cuda',\n",
+    "    'device': config.device\n",
     "}"
    ]
   },
@@ -277,23 +269,14 @@
    "outputs": [],
    "source": [
     "for i, (train_index, test_index) in enumerate(folds):\n",
-    "    model = torch.load(get_best_model_path(f'{config.experiment_name}_stage1_fold_{i}/'), map_location='cpu')\n",
-    "    state_dict = {k.replace('student_model.', ''): v for k, v in model['nn_state_dict'].items() if 'student_model' in k}\n",
-    "    if False:\n",
-    "        state_dict['fc.weight'] = model['nn_state_dict']['fc.weight']\n",
-    "        state_dict['fc.bias'] = model['nn_state_dict']['fc.bias']\n",
-    "    else:\n",
-    "        state_dict['classifier.weight'] = model['nn_state_dict']['fc.weight']\n",
-    "        state_dict['classifier.bias'] = model['nn_state_dict']['fc.bias']\n",
-    "\n",
     "    model = RANZCRStageZero(params)\n",
-    "    model.nn_module.load_state_dict(state_dict)\n",
-    "    model.set_device((0, 1, 2, 3))\n",
+    "    model.load_from_stage_one(get_best_model_path(f'{config.experiment_name}_stage1_fold_{i}/'))\n",
+    "    model.set_device(config.devices)\n",
     "\n",
     "    train_dataset, val_dataset = Subset(dataset, train_index), Subset(dataset, test_index)\n",
     "\n",
-    "    train_loader = DataLoader(train_dataset, batch_size=config.train_batch_size, num_workers=config.n_workers, pin_memory=True, shuffle=True, drop_last=True)\n",
-    "    val_loader = DataLoader(val_dataset, batch_size=config.valid_batch_size, num_workers=config.n_workers, pin_memory=True)\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=config.train_batch_size, num_workers=config.n_workers, shuffle=True, drop_last=True)\n",
+    "    val_loader = DataLoader(val_dataset, batch_size=config.valid_batch_size, num_workers=config.n_workers)\n",
     "\n",
     "    callbacks = [\n",
     "        MonitorCheckpoint(dir_path=f'{config.experiment_name}_stage2_fold_{i}', monitor='val_multi_auc', max_saves=3),\n",
